--- a/package.json
+++ b/package.json
@@ -5,18 +5,33 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/test.ts",
-    "build": "tsc",
-    "start": "node dist/test.js",
-    "test": "tsx src/test.ts",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "test": "tsx tests/engine.test.ts",
+    "test:db": "tsx --env-file=.env.local tests/database.test.ts",
     "serve": "npx serve ."
   },
-  "keywords": ["game", "trading", "clicker"],
+  "keywords": [
+    "game",
+    "trading",
+    "clicker"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^7.3.1"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.90.1",
+    "dotenv": "^17.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   }
 }
