--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
+    "esbuild": "^0.27.2",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vite": "^7.3.1"
